test/moncler/kube.OFF/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: moncler
  namespace: gsc-clients-automation
  labels:
    environment: gsc-clients-automation
    component: moncler
spec:
  selector:
    environment: gsc-clients-automation
    component: moncler
  ports:
    - name: default
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
